mul and divide method added

--- a/code_explore/central_data_structure.ipynb
+++ b/code_explore/central_data_structure.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -76,19 +76,35 @@
     "            return Expression(Sub, Constant(another), self)\n",
     "        \n",
     "\n",
-    "#     def __mul__(self, other):\n",
-    "#         try:\n",
-    "#             return Expression(self.val * other.val, self.val * other.der + self.der * other.val)\n",
-    "#         except AttributeError:\n",
-    "#             return Expression(self.val * other, self.der * other)\n",
+    "    def __mul__(self, another):\n",
+    "        if isinstance(another, Expression):\n",
+    "            return Expression(Mul,self,another)\n",
+    "        else:\n",
+    "            return Expression(Mul, self, Constant(another))\n",
     "\n",
-    "#     def __rmul__(self, other):\n",
-    "#         return Expression(other * self.val, other * self.der)"
+    "    def __rmul__(self, another):\n",
+    "        if isinstance(another, Expression):\n",
+    "            return Expression(Mul,another,self)\n",
+    "        else:\n",
+    "            return Expression(Mul, Constant(another),self)\n",
+    "    \n",
+    "    def __truediv__(self, another):\n",
+    "        if isinstance(another, Expression):\n",
+    "            return Expression(Div,self,another)\n",
+    "        else:\n",
+    "            return Expression(Div, self, Constant(another))\n",
+    "\n",
+    "    def __rtruediv__(self, another):\n",
+    "        if isinstance(another, Expression):\n",
+    "            return Expression(Div,another,self)\n",
+    "        else:\n",
+    "            return Expression(Div, Constant(another),self)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -107,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -126,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -145,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -164,7 +180,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Mul:\n",
+    "    @staticmethod\n",
+    "    def evaluation_at(sub_expr1, sub_expr2, val_dict):\n",
+    "        return sub_expr1.evaluation_at(val_dict) *\\\n",
+    "               sub_expr2.evaluation_at(val_dict)\n",
+    "    @staticmethod\n",
+    "    def derivative_at(sub_expr1, sub_expr2, var, val_dict):\n",
+    "        return sub_expr1.derivative_at(var, val_dict) * \\\n",
+    "               sub_expr2.evaluation_at(val_dict)+ \\\n",
+    "               sub_expr1.evaluation_at(val_dict) *\\\n",
+    "               sub_expr2.derivative_at(var, val_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Div:\n",
+    "    @staticmethod\n",
+    "    def evaluation_at(sub_expr1, sub_expr2, val_dict):\n",
+    "        return sub_expr1.evaluation_at(val_dict) /\\\n",
+    "               sub_expr2.evaluation_at(val_dict)\n",
+    "    @staticmethod\n",
+    "    def derivative_at(sub_expr1, sub_expr2, var, val_dict):\n",
+    "        return  sub_expr1.derivative_at(var, val_dict) / \\\n",
+    "                sub_expr2.evaluation_at(val_dict)+ \\\n",
+    "                sub_expr1.evaluation_at(val_dict) *\\\n",
+    "                sub_expr2.derivative_at(var, val_dict)/\\\n",
+    "                sub_expr2.evaluation_at(val_dict)/\\\n",
+    "                sub_expr2.evaluation_at(val_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -182,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -196,12 +256,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let $f(a, b) = e^{a-b+c}$, at $(a, b, c) = (1.0, 2.0, 3.0)$, that should be $e^{2} \\approx 7.389$."
+    "Let $f(a, b, c) = e^{a-b+c}$, at $(a, b, c) = (1.0, 2.0, 3.0)$, that should be $e^{2} \\approx 7.389$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -215,16 +275,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7.38905609893065"
+       "7.3890560989306504"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -250,10 +310,10 @@
     {
      "data": {
       "text/plain": [
-       "-7.38905609893065"
+       "-7.3890560989306504"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,16 +331,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7.38905609893065"
+       "7.3890560989306504"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -311,16 +371,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.718281828459045"
+       "3.7182818284590451"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +407,7 @@
        "1.0"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,16 +425,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.718281828459045"
+       "2.7182818284590451"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,6 +442,145 @@
    "source": [
     "g.derivative_at(y, {x: 1.0, y: 2.0})"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test for Multiple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = Variable()\n",
+    "y = Variable()\n",
+    "g = x*y\n",
+    "f = x/y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.evaluation_at({x: 2.0, y: 2.0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.derivative_at(x, {x: 1.0, y: 2.0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.evaluation_at({x: 3.0, y: 2.0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.derivative_at(y, {x: 4.0, y: 2.0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = 3.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6666666666666666"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2/3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
