Mul,div,pow method and test added

--- a/code_explore/central_data_structure.ipynb
+++ b/code_explore/central_data_structure.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -99,12 +99,23 @@
     "            return Expression(Div,another,self)\n",
     "        else:\n",
     "            return Expression(Div, Constant(another),self)\n",
-    "        "
+    "    \n",
+    "    def __pow__(self,another):\n",
+    "        if isinstance(another, Expression):\n",
+    "            return Expression(Pow,self,another)\n",
+    "        else:\n",
+    "            return Expression(Pow, self, Constant(another))\n",
+    "    \n",
+    "    def __rpow__(self,another):\n",
+    "        if isinstance(another, Expression):\n",
+    "            return Expression(Pow,another,self)\n",
+    "        else:\n",
+    "            return Expression(Pow, Constant(another),self)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -123,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -142,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -161,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -180,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -201,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -224,7 +235,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Pow:\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def evaluation_at(sub_expr1, sub_expr2, val_dict):\n",
+    "        return sub_expr1.evaluation_at(val_dict) **\\\n",
+    "               sub_expr2.evaluation_at(val_dict)\n",
+    "    @staticmethod\n",
+    "    #f(x)^g(x) * g‘(x)  * ln( f(x) )+ f(x)^( g(x)-1 ) * g(x) * f’(x) \n",
+    "    def derivative_at(sub_expr1, sub_expr2, var, val_dict):\n",
+    "        return  sub_expr1.evaluation_at(val_dict)** \\\n",
+    "                sub_expr2.evaluation_at(val_dict)* \\\n",
+    "                sub_expr2.derivative_at(var, val_dict)*\\\n",
+    "                np.log(sub_expr1.evaluation_at(val_dict))+ \\\n",
+    "                sub_expr1.evaluation_at(val_dict) **\\\n",
+    "                (sub_expr2.evaluation_at(val_dict)-1)*\\\n",
+    "                sub_expr2.evaluation_at(val_dict)*\\\n",
+    "                sub_expr1.derivative_at(var, val_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -242,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -261,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -275,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +322,7 @@
        "7.3890560989306504"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "metadata": {
     "scrolled": true
    },
@@ -313,7 +351,7 @@
        "-7.3890560989306504"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +378,7 @@
        "7.3890560989306504"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -371,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +418,7 @@
        "3.7182818284590451"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +445,7 @@
        "1.0"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +472,7 @@
        "2.7182818284590451"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,8 +490,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = Variable()\n",
@@ -464,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +513,7 @@
        "4.0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +533,7 @@
        "2.0"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +553,7 @@
        "1.5"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +573,7 @@
        "1.0"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -555,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -564,13 +604,95 @@
        "0.6666666666666666"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "2/3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Test for Power"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = Variable()\n",
+    "y = Variable()\n",
+    "g = x**y\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.0"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.evaluation_at({x: 3.0, y: 2.0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.8875105980129874"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.derivative_at(y, {x: 3.0, y: 2.0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.8875105980129874"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log(3.)*3**2"
    ]
   },
   {
