Added instructions for installation.

--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -65,11 +65,30 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Installing `autodiff`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is how to install `autodiff` on command line. We suppose that the user has already installed `pip` and `virtualenv`:\n",
+    "1. clone the project repo by `git clone git@github.com:D-Y-F-S/cs207-FinalProject.git`\n",
+    "2. `cd` into the local repo and create a virtual environment by `virtualenv env`\n",
+    "3. activate the virtual environment by `source env/bin/activate`\n",
+    "4. install the dependencies by `pip install -r requirements.txt`\n",
+    "5. install `autodiff` by `pip install -e .`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "## How to Use dyfs"
+    "## Getting Started"
    ]
   },
   {
@@ -366,7 +385,11 @@
    "source": [
     "The source codes lies in the directory `autodiff`, in which the `__init__.py` is there to make `autodiff` a package. Currently all the source codes are in the file `forward.py`. In the future, we may want to break it into multiple files later for better organization.\n",
     "\n",
-    "The test suites lies in the directory `tests`. Currently all the test codes are in the file `test_forward.py`. In the future, we may want to break it into multiple files later for better organization."
+    "The test suites lies in the directory `tests`. Currently all the test codes are in the file `test_forward.py`. In the future, we may want to break it into multiple files later for better organization.\n",
+    "\n",
+    "The documents lies in the directory `docs`. `milestone1.ipynb` is the history version of document when submitting milestone 1. `milestone2.ipynb`, which is this file itself, is the document when submitting milestone 2.\n",
+    "\n",
+    "Other files in the rrot directory includes: `.gitignore`, which specifies the files that should not be tracked by git, `.travis.yml`, which is the configuration file for TravisCI, `LICENSE.txt`, which is the license for this package, `README.md`, which is the README file for this package, `requirements.txt`, which specifies the dependensies of this package, `setup.cfg`, which is the configuration file for installing this package, `setup.py`, which is the script for installing this package."
    ]
   },
   {
