Software organization part of doc.

--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -76,8 +76,8 @@
    "source": [
     "Here is how to install `autodiff` on command line. We suppose that the user has already installed `pip` and `virtualenv`:\n",
     "1. clone the project repo by `git clone git@github.com:D-Y-F-S/cs207-FinalProject.git`\n",
-    "2. `cd` into the local repo and create a virtual environment by `virtualenv env`\n",
-    "3. activate the virtual environment by `source env/bin/activate`\n",
+    "2. `cd` into the local repo and create a virtual environment by `virtualenv env` \n",
+    "3. activate the virtual environment by `source env/bin/activate` (use `deactivate` to deactivate the virtual environment later.)\n",
     "4. install the dependencies by `pip install -r requirements.txt`\n",
     "5. install `autodiff` by `pip install -e .`"
    ]
