--- a/code_explore/central_data_structure.ipynb
+++ b/code_explore/central_data_structure.ipynb
@@ -657,42 +657,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9.8875105980129874"
+       "6.0"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "g.derivative_at(y, {x: 3.0, y: 2.0})"
+    "g.derivative_at(x, {x: 3.0, y: 2.0})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/ting/Dropbox (MIT)/Fall 2018/CS207/cs207-FinalProject\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "cd /Users/ting/Dropbox\\ \\(MIT\\)/Fall\\ 2018/CS207/cs207-FinalProject/\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9.8875105980129874"
+       "'/Users/ting/Dropbox (MIT)/Fall 2018/CS207/cs207-FinalProject/code_explore'"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "bash: line 2: import: command not found\n",
+      "bash: line 3: import: command not found\n",
+      "bash: line 4: import: command not found\n",
+      "bash: line 7: syntax error near unexpected token `('\n",
+      "bash: line 7: `def test_multiple_constant():'\n"
+     ]
+    }
+   ],
    "source": [
-    "np.log(3.)*3**2"
+    "\n",
+    "import pytest\n",
+    "import numpy as np\n",
+    "import autodiff.forward as fwd\n",
+    "\n",
+    "\n",
+    "def test_multiple_constant():\n",
+    "    x = fwd.Variable()\n",
+    "    assert (2.0*x).derivative_at(x,{x:3.0}) == 2.0\n",
+    "    assert (x*2.0).derivative_at(x,{x:3.0}) == 2.0\n",
+    "\n",
+    "def test_divide_constant():\n",
+    "    x = fwd.Variable()\n",
+    "    assert (x/2.0).derivative_at(x,{x:3.0}) == 0.5\n",
+    "    assert (2.0/x).derivative_at(x,{x:3.0}) == -2/9.0\n",
+    "\n",
+    "def test_multiple():\n",
+    "    x = fwd.Variable()\n",
+    "    y = fwd.Variable()\n",
+    "    f = x*y\n",
+    "    assert f.evaluation_at({x: 3.0, y: 2.0}) == 6.0\n",
+    "    assert f.derivative_at(x, {x: 3.0, y: 2.0}) == 2.0\n",
+    "    assert f.derivative_at(y, {x: 3.0, y: 2.0}) == 3.0\n",
+    "\n",
+    "def test_divide():\n",
+    "    x = fwd.Variable()\n",
+    "    y = fwd.Variable()\n",
+    "    f = x/y\n",
+    "    assert f.evaluation_at({x: 3.0, y: 2.0}) == 1.5\n",
+    "    assert f.derivative_at(x, {x: 3.0, y: 2.0}) == 1/2.0\n",
+    "    assert f.derivative_at(y, {x: 3.0, y: 2.0}) == -0.75\n",
+    "\n",
+    "def test_power():\n",
+    "    x = fwd.Variable()\n",
+    "    y = fwd.Variable()\n",
+    "    f = x**y\n",
+    "    assert f.evaluation_at({x: 3.0, y: 2.0}) == 9.0\n",
+    "    assert f.derivative_at(x, {x: 3.0, y: 2.0}) == 6.0\n",
+    "    assert f.derivative_at(y, {x: 3.0, y: 2.0}) == np.log(3.)*3**2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fwd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-74-156ddc468454>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_power\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-73-b2607bf9d6a0>\u001b[0m in \u001b[0;36mtest_power\u001b[0;34m()\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtest_power\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m     \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfwd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m     \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfwd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'fwd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "test_power()"
    ]
   },
   {
