Finished Software organization part.

--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -403,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are 3 modules in `dyfs`: `dyfs.forward` module contains classes and methods for forward mode auto differentiation. The directory named `ele_func` under `dyfs.forward` is the directory where all elementary function classes live. `dyfs.backward` contains classes and methods for backward mode auto differentiation. `dyfs.usecase` module contains some examples built on `dyfs.forward` and `dyfs.backward`."
+    "There are currently 1 module in `autodiff`, that is `forward`, which implements the forward mode autodifferenciation. The other modules we are planning to add include: `backward`, which implements the backward mode autodifferenciation. `usecase`, which contains some example client codes built on top of `forward` and `backward`."
    ]
   },
   {
@@ -417,7 +417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`TravisCI` and `Coveralls` are used for test automation. The test suites for each module is included in the `tests` directory whithin the moduel directory."
+    "`TravisCI` and `Coveralls` are used for test automation. The test suites for each module is included in the `tests` directory."
    ]
   },
   {
@@ -431,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`dyfs` is distributed with `PyPI`."
+    "Currently `autodiff` has to be manually installed. It will be distributed with `PyPI` in the future."
    ]
   },
   {
