--- a/code_explore/central_data_structure.ipynb
+++ b/code_explore/central_data_structure.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 91,
    "metadata": {
     "collapsed": true
    },
@@ -13,10 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 95,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Expression:\n",
@@ -39,6 +37,8 @@
     "    \n",
     "    def derivative_at(self, var, val_dict):\n",
     "        \n",
+    "        if var is self: return 1.0\n",
+    "        \n",
     "        # sub_expr2 is None implies that _ele_func is an unary operator\n",
     "        if self._sub_expr2 is None:\n",
     "            return self._ele_func.derivative_at(\n",
@@ -49,6 +49,10 @@
     "            return self._ele_func.derivative_at(\n",
     "                self._sub_expr1, self._sub_expr2, var, val_dict)\n",
     "    \n",
+    "    def __neg__(self):\n",
+    "        return Expression(Neg, self)\n",
+    "\n",
+    "                \n",
     "    def __add__(self, another):\n",
     "        if isinstance(another, Expression):\n",
     "            return Expression(Add, self, another)\n",
@@ -56,6 +60,7 @@
     "        # the number then should be converted to a Constant\n",
     "        else:\n",
     "            return Expression(Add, self, Constant(another))\n",
+    "    \n",
     "    \n",
     "    def __radd__(self, another):\n",
     "        if isinstance(another, Expression):\n",
@@ -115,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 96,
    "metadata": {
     "collapsed": true
    },
@@ -134,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 97,
    "metadata": {
     "collapsed": true
    },
@@ -153,7 +158,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Neg:\n",
+    "    @staticmethod\n",
+    "    def evaluation_at(sub_expr1, val_dict):\n",
+    "        return -sub_expr1.evaluation_at(val_dict)\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def derivative_at(sub_expr1, var, val_dict):\n",
+    "        return -sub_expr1.derivative_at(var, val_dict)\n",
+    "             "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {
     "collapsed": true
    },
@@ -172,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 100,
    "metadata": {
     "collapsed": true
    },
@@ -191,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 101,
    "metadata": {
     "collapsed": true
    },
@@ -212,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 102,
    "metadata": {
     "collapsed": true
    },
@@ -235,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true
    },
@@ -262,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 104,
    "metadata": {
     "collapsed": true
    },
@@ -280,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 105,
    "metadata": {
     "collapsed": true
    },
@@ -299,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 106,
    "metadata": {
     "collapsed": true
    },
@@ -313,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +346,7 @@
        "7.3890560989306504"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 108,
    "metadata": {
     "scrolled": true
    },
@@ -351,7 +375,7 @@
        "-7.3890560989306504"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +402,7 @@
        "7.3890560989306504"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 110,
    "metadata": {
     "collapsed": true
    },
@@ -409,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +442,7 @@
        "3.7182818284590451"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +469,7 @@
        "1.0"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +496,7 @@
        "2.7182818284590451"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 114,
    "metadata": {
     "collapsed": true
    },
@@ -504,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +537,7 @@
        "4.0"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +557,7 @@
        "2.0"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +577,7 @@
        "1.5"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +597,7 @@
        "1.0"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 119,
    "metadata": {
     "collapsed": true
    },
@@ -595,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +628,7 @@
        "0.6666666666666666"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 121,
    "metadata": {
     "collapsed": true
    },
@@ -637,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +670,7 @@
        "9.0"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +690,7 @@
        "6.0"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,120 +700,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 82,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/ting/Dropbox (MIT)/Fall 2018/CS207/cs207-FinalProject\n"
-     ]
-    }
-   ],
    "source": [
-    "%%bash\n",
-    "cd /Users/ting/Dropbox\\ \\(MIT\\)/Fall\\ 2018/CS207/cs207-FinalProject/\n"
+    "### Test for unary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=Variable()\n",
+    "f= -y*x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/ting/Dropbox (MIT)/Fall 2018/CS207/cs207-FinalProject/code_explore'"
+       "-6"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "bash: line 2: import: command not found\n",
-      "bash: line 3: import: command not found\n",
-      "bash: line 4: import: command not found\n",
-      "bash: line 7: syntax error near unexpected token `('\n",
-      "bash: line 7: `def test_multiple_constant():'\n"
-     ]
-    }
-   ],
    "source": [
-    "\n",
-    "import pytest\n",
-    "import numpy as np\n",
-    "import autodiff.forward as fwd\n",
-    "\n",
-    "\n",
-    "def test_multiple_constant():\n",
-    "    x = fwd.Variable()\n",
-    "    assert (2.0*x).derivative_at(x,{x:3.0}) == 2.0\n",
-    "    assert (x*2.0).derivative_at(x,{x:3.0}) == 2.0\n",
-    "\n",
-    "def test_divide_constant():\n",
-    "    x = fwd.Variable()\n",
-    "    assert (x/2.0).derivative_at(x,{x:3.0}) == 0.5\n",
-    "    assert (2.0/x).derivative_at(x,{x:3.0}) == -2/9.0\n",
-    "\n",
-    "def test_multiple():\n",
-    "    x = fwd.Variable()\n",
-    "    y = fwd.Variable()\n",
-    "    f = x*y\n",
-    "    assert f.evaluation_at({x: 3.0, y: 2.0}) == 6.0\n",
-    "    assert f.derivative_at(x, {x: 3.0, y: 2.0}) == 2.0\n",
-    "    assert f.derivative_at(y, {x: 3.0, y: 2.0}) == 3.0\n",
-    "\n",
-    "def test_divide():\n",
-    "    x = fwd.Variable()\n",
-    "    y = fwd.Variable()\n",
-    "    f = x/y\n",
-    "    assert f.evaluation_at({x: 3.0, y: 2.0}) == 1.5\n",
-    "    assert f.derivative_at(x, {x: 3.0, y: 2.0}) == 1/2.0\n",
-    "    assert f.derivative_at(y, {x: 3.0, y: 2.0}) == -0.75\n",
-    "\n",
-    "def test_power():\n",
-    "    x = fwd.Variable()\n",
-    "    y = fwd.Variable()\n",
-    "    f = x**y\n",
-    "    assert f.evaluation_at({x: 3.0, y: 2.0}) == 9.0\n",
-    "    assert f.derivative_at(x, {x: 3.0, y: 2.0}) == 6.0\n",
-    "    assert f.derivative_at(y, {x: 3.0, y: 2.0}) == np.log(3.)*3**2\n"
+    "f.evaluation_at({x:2,y:3})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'fwd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-74-156ddc468454>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_power\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-73-b2607bf9d6a0>\u001b[0m in \u001b[0;36mtest_power\u001b[0;34m()\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtest_power\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m     \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfwd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m     \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfwd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'fwd' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "-3.0"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_power()"
+    "f.derivative_at(x,{x:2,y:3})"
    ]
   },
   {
